fix: CORS - usa proxy Nginx em vez de URL absoluta, skip OPTIONS no gateway filter